added dataframe, removed -1'

--- a/Data Music (change name later).ipynb
+++ b/Data Music (change name later).ipynb
@@ -2,15 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['31.0', '0.0127', '0.622', '218293.0', '0.89', '0.95', 2, '0.124', '-7.042999999999999', 0, '0.03', '115.00200000000001', '0.531', 0]\n"
+      "['29.0', '0.00857', '0.643', '234874.0', '0.966', '0.00331', 10, '0.255', '-3.902', 0, '0.0442', '131.982', '0.912', 1]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(40549, 14)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -60,7 +70,7 @@
     "                row[14] = ''\n",
     "            \n",
     "            #music_genre (17 in list)\n",
-    "            if row[17] in genres:\n",
+    "            if row[17] in genres and row[17] != 0:\n",
     "                row[17] = genres.index(row[17])\n",
     "            else:\n",
     "                genres.append(row[17])\n",
@@ -68,15 +78,134 @@
     "            \n",
     "            #make sure to not include list items 0-2 and item 15 in list\n",
     "            new = row[3:15]+row[16:]\n",
-    "            data.append(new)\n",
+    "            if row[17] != 0 and row[6] != '-1.0':\n",
+    "                data.append(new)\n",
+    "            \n",
+    "            \n",
     "            \n",
     "        count = count + 1\n",
     "print(data[1])\n",
-    "\n",
+    "for count,row in enumerate(data):\n",
+    "    for count2,c in enumerate(row):\n",
+    "        if data[count][count2] != '':\n",
+    "            data[count][count2] = float(data[count][count2])\n",
+    "        else:\n",
+    "            data[count][count2] = 0\n",
     "data = np.array(data)\n",
     "        \n",
-    "        \n",
+    "np.shape(data)\n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dur = df.iloc[:,6]\n",
+    "for i in range(len(dur)):\n",
+    "    if dur[i] < 0.0:\n",
+    "        dur[i] = 0.00\n",
+    "        \n",
+    "#finding the average of the duration of the songs (in milliseconds)\n",
+    "avg = np.sum(dur) / len(dur)\n",
+    "avg\n",
+    "\n",
+    "#replacing all 0.0 values\n",
+    "for i in range(len(dur)):\n",
+    "    if dur[i] == 0.0:\n",
+    "        dur[i] = avg\n",
+    "        \n",
+    "df.iloc[:,6] = dur\n",
+    "df=df.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perceptron\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_stochastic_gradient.py:570: ConvergenceWarning: Maximum number of iteration reached before convergence. Consider increasing max_iter to improve the fit.\n",
+      "  warnings.warn(\"Maximum number of iteration reached before \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3958076448828607\n",
+      "Forest\n",
+      "0.5676942046855734\n",
+      "kNN\n",
+      "0.4939580764488286\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "from sklearn import linear_model  # Using sklearn Perceptron classifier\n",
+    "from sklearn import tree  # Using Tree classifier\n",
+    "from sklearn import neighbors  # Using nearest neighbors classifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report\n",
+    "import sklearn.svm as svm\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "from sklearn import ensemble\n",
+    "\n",
+    "\n",
+    "\n",
+    "learners = {#'Perceptron': linear_model.Perceptron(max_iter=10),\n",
+    "            'Forest': ensemble.RandomForestClassifier(),\n",
+    "            'kNN': neighbors.KNeighborsClassifier(),\n",
+    "            #'Logistic': LogisticRegression(),\n",
+    "            #'SVM': svm.SVC()\n",
+    "           }\n",
+    "\n",
+    "    \n",
+    "DATA = np.array(df)\n",
+    "X = DATA[:,:-1]\n",
+    "y = DATA[:,-1]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20)\n",
+    "    \n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "X_train = scaler.transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "for classM in learners:\n",
+    "    print(classM)\n",
+    "    scaler = StandardScaler()\n",
+    "    scaler.fit(X_train)\n",
+    "    X_train = scaler.transform(X_train)\n",
+    "    X_test = scaler.transform(X_test)\n",
+    "    learners[classM].fit(X_train,y_train)\n",
+    "    print(learners[classM].score(X_test,y_test))\n",
+    "\n",
+    "\n"
    ]
   },
   {
